Adding feature finding from OMICS into the application.  Removing C++ code so that I can map the MSMS spectra to the UMC Clusters.

--- a/src/PNNLProteomics/PNNLProteomics.csproj
+++ b/src/PNNLProteomics/PNNLProteomics.csproj
@@ -178,6 +178,9 @@
     <Compile Include="Algorithms\Alignment\IFeatureAligner.cs" />
     <Compile Include="Algorithms\AlgorithmBuilder.cs" />
     <Compile Include="Algorithms\Clustering\ClusteringAlgorithmType.cs" />
+    <Compile Include="Algorithms\FeatureFinding\IFeatureFinder.cs" />
+    <Compile Include="Algorithms\FeatureFinding\OMICSFeatureFinder.cs" />
+    <Compile Include="Algorithms\FeatureFinding\UMCFeatureFinder.cs" />
     <Compile Include="Algorithms\PeakMatching\IPeakMatcher.cs" />
     <Compile Include="Algorithms\PeakMatching\PeakMatcher.cs" />
     <Compile Include="Analysis\clsEMNormalizer.cs" />
@@ -313,7 +316,6 @@
     <EmbeddedResource Include="MultiAlign\Hibernate\Mappings\MSFeature.hbm.xml" />
   </ItemGroup>
   <ItemGroup>
-    <Folder Include="Algorithms\FeatureFinding\" />
     <Folder Include="IO\Hibernate\Mappings\" />
   </ItemGroup>
   <ItemGroup>
