--- a/src/PNNLProteomics/PNNLProteomics.csproj
+++ b/src/PNNLProteomics/PNNLProteomics.csproj
@@ -182,9 +182,6 @@
     <Compile Include="Algorithms\FeatureFinding\UMCFeatureFinder.cs" />
     <Compile Include="Algorithms\PeakMatching\IPeakMatcher.cs" />
     <Compile Include="Algorithms\PeakMatching\PeakMatcher.cs" />
-    <Compile Include="Analysis\clsEMNormalizer.cs" />
-    <Compile Include="Analysis\clsHistogram.cs" />
-    <Compile Include="Analysis\clsLinearNormalizer.cs" />
     <Compile Include="Cephes\clsMathUtilities.cs" />
     <Compile Include="Data\DatasetInformation.cs" />
     <Compile Include="Data\DeisotopingTool.cs" />
@@ -192,32 +189,60 @@
     <Compile Include="Data\LabelingType.cs" />
     <Compile Include="Data\MassTags\MassTagDatabase.cs" />
     <Compile Include="Data\MassTags\MassTagDatabaseFormat.cs" />
-    <Compile Include="IO\AnalysisMTDBSetupException.cs" />
-    <Compile Include="IO\InputDatabase.cs" />
-    <Compile Include="IO\InputFile.cs" />
-    <Compile Include="IO\InputFileType.cs" />
+    <Compile Include="IO\Analysis\AnalysisAbundanceTableWriter.cs" />
+    <Compile Include="IO\Analysis\AnalysisAlignmentDataWriter.cs" />
+    <Compile Include="IO\Analysis\AnalysisBinaryReader.cs" />
+    <Compile Include="IO\Analysis\AnalysisBinaryWriter.cs" />
+    <Compile Include="IO\Analysis\AnalysisDatasetUMCWriter.cs" />
+    <Compile Include="IO\Analysis\AnalysisSQLiteDBWriter.cs" />
+    <Compile Include="IO\Analysis\AnalysisTableWriter.cs" />
+    <Compile Include="IO\Analysis\ContainerStream.cs" />
+    <Compile Include="IO\Analysis\IAnalysisWriter.cs" />
+    <Compile Include="IO\Analysis\IMultiAlignAnalysisReader.cs" />
+    <Compile Include="IO\Analysis\IMultiAlignAnalysisWriter.cs" />
+    <Compile Include="IO\Analysis\IOProgressEventArgs.cs" />
+    <Compile Include="IO\Analysis\PeakMatchResultsWriter.cs" />
+    <Compile Include="IO\Analysis\ReadProgressStream.cs" />
+    <Compile Include="IO\Analysis\TableWriterColumnOptions.cs" />
+    <Compile Include="IO\Features\DataAccessFactory.cs" />
+    <Compile Include="IO\Features\FeatureDataAccessProviders.cs" />
+    <Compile Include="IO\Features\Hibernate\DatasetDAOHibernate.cs" />
+    <Compile Include="IO\Features\Hibernate\FactorDAOHibernate.cs" />
+    <Compile Include="IO\Features\Hibernate\GenericDAOHibernate.cs" />
+    <Compile Include="IO\Features\Hibernate\MassTagConformation.cs" />
+    <Compile Include="IO\Features\Hibernate\MassTagDAO.cs" />
+    <Compile Include="IO\Features\Hibernate\MassTagDAOHibernate.cs" />
+    <Compile Include="IO\Features\Hibernate\MSFeatureDAOHibernate.cs" />
+    <Compile Include="IO\Features\Hibernate\NHibernateUtil.cs" />
+    <Compile Include="IO\Features\Hibernate\ProteinDAO.cs" />
+    <Compile Include="IO\Features\Hibernate\ProteinDAOHibernate.cs" />
+    <Compile Include="IO\Features\Hibernate\UmcClusterDAOHibernate.cs" />
+    <Compile Include="IO\Features\Hibernate\UmcDAOHibernate.cs" />
+    <Compile Include="IO\Features\IDatasetDAO.cs" />
+    <Compile Include="IO\Features\IFactorDAO.cs" />
+    <Compile Include="IO\Features\IGenericDAO.cs" />
+    <Compile Include="IO\Features\IMassTagDAO.cs" />
+    <Compile Include="IO\Features\IMSFeatureDAO.cs" />
+    <Compile Include="IO\Features\IProteinDAO.cs" />
+    <Compile Include="IO\Features\IUmcClusterDAO.cs" />
+    <Compile Include="IO\Features\IUmcDAO.cs" />
+    <Compile Include="IO\Features\Mammoth\IFeatureDatabase.cs" />
+    <Compile Include="IO\Features\Mammoth\MammothDatabase.cs" />
+    <Compile Include="IO\Features\Mammoth\MammothDatabaseRange.cs" />
+    <Compile Include="IO\Features\Mammoth\MammothDatabaseStateException.cs" />
+    <Compile Include="IO\Features\UMCLoaderFactory.cs" />
+    <Compile Include="IO\Features\UmcReader.cs" />
+    <Compile Include="IO\InputFiles\InputAnalysisInfo.cs" />
+    <Compile Include="IO\InputFiles\InputDatabase.cs" />
+    <Compile Include="IO\InputFiles\InputFile.cs" />
+    <Compile Include="IO\InputFiles\InputFileReadMode.cs" />
+    <Compile Include="IO\InputFiles\InputFileType.cs" />
     <Compile Include="Data\ProjectMetaData.cs" />
     <Compile Include="Filters\FilterUtil.cs" />
     <Compile Include="Filters\IFilter.cs" />
     <Compile Include="Filters\UMCClusterFilters.cs" />
     <Compile Include="Filters\UMCFilters.cs" />
     <Compile Include="ICloneable.cs" />
-    <Compile Include="IO\AnalysisAbundanceTableWriter.cs" />
-    <Compile Include="IO\AnalysisAlignmentDataWriter.cs" />
-    <Compile Include="IO\AnalysisDatasetUMCWriter.cs" />
-    <Compile Include="IO\AnalysisBinaryReader.cs" />
-    <Compile Include="IO\AnalysisBinaryWriter.cs" />
-    <Compile Include="IO\AnalysisLogWriter.cs" />
-    <Compile Include="IO\AnalysisSQLiteDBWriter.cs" />
-    <Compile Include="IO\AnalysisTableWriter.cs" />
-    <Compile Include="IO\CommandLineParser.cs" />
-    <Compile Include="IO\InputFileReadMode.cs" />
-    <Compile Include="IO\IParameterFileReader.cs" />
-    <Compile Include="IO\IParameterFileWriter.cs" />
-    <Compile Include="IO\Mammoth\IFeatureDatabase.cs" />
-    <Compile Include="IO\Mammoth\MammothDatabase.cs" />
-    <Compile Include="IO\Mammoth\MammothDatabaseRange.cs" />
-    <Compile Include="IO\Mammoth\MammothDatabaseStateException.cs" />
     <Compile Include="IO\MTDB\AccessMassTagDatabaseLoader.cs" />
     <Compile Include="IO\MTDB\IMTDBLoader.cs" />
     <Compile Include="IO\MTDB\MassTagDatabaseLoader.cs" />
@@ -226,46 +251,17 @@
     <Compile Include="IO\MTDB\MTSPeakMatchResultsWriter.cs" />
     <Compile Include="IO\MTDB\MTSSqlServerPeakMatchResultWriter.cs" />
     <Compile Include="IO\MTDB\SqliteMassTagDatabaseLoader.cs" />
-    <Compile Include="IO\MultiAlignFileInputReader.cs" />
-    <Compile Include="IO\PeakMatchResultsWriter.cs" />
+    <Compile Include="IO\Parameters\IParameterFileReader.cs" />
+    <Compile Include="IO\Parameters\IParameterFileWriter.cs" />
+    <Compile Include="IO\Parameters\MultiAlignParameterIniFileReader.cs" />
+    <Compile Include="IO\Parameters\MultiAlignParameterIniFileWriter.cs" />
+    <Compile Include="IO\Parameters\xmlIO.cs" />
+    <Compile Include="IO\Parameters\XMLParameterFileReader.cs" />
+    <Compile Include="IO\Parameters\XMLParameterFileWriter.cs" />
     <Compile Include="IO\Reports\AnalysisHTMLReport.cs" />
-    <Compile Include="IO\XMLParameterFileReader.cs" />
-    <Compile Include="IO\XMLParameterFileWriter.cs" />
-    <Compile Include="IO\DataAccessFactory.cs" />
-    <Compile Include="IO\DatabaseDatasetIDLoader.cs" />
-    <Compile Include="IO\DatabaseDatasetLoader.cs" />
-    <Compile Include="IO\DelegatesLoading.cs" />
-    <Compile Include="IO\DiskDatasetLoader.cs" />
-    <Compile Include="IO\DMSDatasetSearchOptions.cs" />
-    <Compile Include="IO\FeatureDataAccessProviders.cs" />
-    <Compile Include="IO\FileCopyEventArgs.cs" />
-    <Compile Include="IO\IAnalysisWriter.cs" />
-    <Compile Include="IO\IMultiAlignAnalysisReader.cs" />
-    <Compile Include="IO\IMultiAlignAnalysisWriter.cs" />
-    <Compile Include="IO\InputAnalysisInfo.cs" />
-    <Compile Include="IO\IOProgressEventArgs.cs" />
     <Compile Include="IO\MTDB\MTDBLoaderFactory.cs" />
-    <Compile Include="IO\MultiAlignParameterIniFileReader.cs" />
-    <Compile Include="IO\MultiAlignParameterIniFileWriter.cs" />
-    <Compile Include="IO\TableWriterColumnOptions.cs" />
-    <Compile Include="IO\UMC\UMCLoaderFactory.cs" />
-    <Compile Include="IO\XAMTReader.cs" />
-    <Compile Include="MultiAlign\AnalysisUtils.cs" />
-    <Compile Include="MultiAlign\Hibernate\Domain\DAOHibernate\ProteinDAO.cs" />
-    <Compile Include="MultiAlign\Hibernate\Domain\DAOHibernate\FactorDAOHibernate.cs" />
-    <Compile Include="MultiAlign\Hibernate\Domain\DAOHibernate\DatasetDAOHibernate.cs" />
-    <Compile Include="MultiAlign\Hibernate\Domain\DAOHibernate\MassTagDAO.cs" />
-    <Compile Include="MultiAlign\Hibernate\Domain\DAO\IFactorDAO.cs" />
-    <Compile Include="MultiAlign\Hibernate\Domain\DAO\IDatasetDAO.cs" />
-    <Compile Include="MultiAlign\Hibernate\Domain\Factor.cs" />
-    <Compile Include="MultiAlign\Hibernate\Domain\MassTagConformation.cs" />
-    <Compile Include="MultiAlign\Hibernate\Domain\StacFDR.cs" />
-    <Compile Include="MultiAlign\MultiAlignAnalysis.cs" />
-    <Compile Include="Analysis\clsTTest.cs" />
-    <Compile Include="Analysis\clsTTestVals.cs" />
     <Compile Include="Data\Alignment\classAlignmentData.cs" />
     <Compile Include="Data\clsDMSServerInformation.cs" />
-    <Compile Include="Data\clsPair.cs" />
     <Compile Include="Data\Cluster\classClusterDataSummaryAttr.cs" />
     <Compile Include="Data\Cluster\classClusterMassTagMatch.cs" />
     <Compile Include="Data\Factors\FactorDefinitions.cs" />
@@ -273,51 +269,23 @@
     <Compile Include="Data\Factors\classTreeNode.cs" />
     <Compile Include="Data\Factors\classTreeNodeConverter.cs" />
     <Compile Include="Data\MassTags\clsMassTags.cs" />
-    <Compile Include="EventModel\Delegates.cs" />
-    <Compile Include="EventModel\IMessageClass.cs" />
-    <Compile Include="IO\classContainerStream.cs" />
-    <Compile Include="IO\clsReadProgressStream.cs" />
-    <Compile Include="IO\xmlIO.cs" />
-    <Compile Include="MultiAlign\Hibernate\Domain\ClusterToMassTagMap.cs" />
-    <Compile Include="MultiAlign\Hibernate\Domain\MassTagToProteinMap.cs" />
-    <Compile Include="MultiAlign\Hibernate\Domain\DAOHibernate\MSFeatureDAOHibernate.cs" />
-    <Compile Include="MultiAlign\Hibernate\Domain\DAO\IGenericDAO.cs" />
-    <Compile Include="MultiAlign\Hibernate\Domain\DAO\IMSFeatureDAO.cs" />
-    <Compile Include="MultiAlign\Hibernate\Domain\DAO\IProteinDAO.cs" />
-    <Compile Include="MultiAlign\Hibernate\Domain\DAO\IMassTagDAO.cs" />
-    <Compile Include="MultiAlign\Hibernate\Domain\DAO\IUmcClusterDAO.cs" />
-    <Compile Include="MultiAlign\Hibernate\Domain\DAOHibernate\GenericDAOHibernate.cs" />
-    <Compile Include="MultiAlign\Hibernate\Domain\DAOHibernate\UmcClusterDAOHibernate.cs" />
-    <Compile Include="MultiAlign\Hibernate\Domain\DAO\IUmcDAO.cs" />
-    <Compile Include="MultiAlign\Hibernate\Domain\DAOHibernate\UmcDAOHibernate.cs" />
-    <Compile Include="MultiAlign\Hibernate\NHibernateUtil.cs" />
-    <Compile Include="MultiAlign\MultiAlignAnalysisDelegates.cs" />
-    <Compile Include="MultiAlign\MultiAlignAnalysisProcessor.cs" />
-    <Compile Include="MultiAlign\UmcReader.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
-    <EmbeddedResource Include="MultiAlign\Hibernate\Mappings\MassTag.hbm.xml" />
-    <EmbeddedResource Include="MultiAlign\Hibernate\Mappings\Protein.hbm.xml" />
-    <EmbeddedResource Include="MultiAlign\Hibernate\Mappings\Umc.hbm.xml" />
-    <EmbeddedResource Include="MultiAlign\Hibernate\Mappings\UmcCluster.hbm.xml" />
+    <Content Include="IO\Features\Hibernate\hibernate.cfg.xml" />
+    <Content Include="IO\Features\Hibernate\Mappings\ClusterToMassTagMap.hbm.xml" />
+    <Content Include="IO\Features\Hibernate\Mappings\Dataset.hbm.xml" />
+    <Content Include="IO\Features\Hibernate\Mappings\Factor.hbm.xml" />
+    <Content Include="IO\Features\Hibernate\Mappings\MassTag.hbm.xml" />
+    <Content Include="IO\Features\Hibernate\Mappings\MassTagConformations.hbm.xml" />
+    <Content Include="IO\Features\Hibernate\Mappings\MassTagToProteinMap.hbm.xml" />
+    <Content Include="IO\Features\Hibernate\Mappings\MSFeature.hbm.xml" />
+    <Content Include="IO\Features\Hibernate\Mappings\Protein.hbm.xml" />
+    <Content Include="IO\Features\Hibernate\Mappings\StacFDR.hbm.xml" />
+    <Content Include="IO\Features\Hibernate\Mappings\Umc.hbm.xml" />
+    <Content Include="IO\Features\Hibernate\Mappings\UmcCluster.hbm.xml" />
   </ItemGroup>
-  <ItemGroup>
-    <Content Include="hibernate.cfg.xml">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </Content>
-    <EmbeddedResource Include="MultiAlign\Hibernate\Mappings\Factor.hbm.xml" />
-    <EmbeddedResource Include="MultiAlign\Hibernate\Mappings\MassTagConformations.hbm.xml" />
-    <EmbeddedResource Include="MultiAlign\Hibernate\Mappings\StacFDR.hbm.xml" />
-    <EmbeddedResource Include="MultiAlign\Hibernate\Mappings\Dataset.hbm.xml" />
-    <EmbeddedResource Include="MultiAlign\Hibernate\Mappings\MassTagToProteinMap.hbm.xml" />
-    <EmbeddedResource Include="MultiAlign\Hibernate\Mappings\ClusterToMassTagMap.hbm.xml" />
-    <EmbeddedResource Include="MultiAlign\Hibernate\Mappings\MSFeature.hbm.xml" />
-  </ItemGroup>
-  <ItemGroup>
-    <Folder Include="IO\Features\" />
-    <Folder Include="IO\Hibernate\Mappings\" />
-  </ItemGroup>
+  <ItemGroup />
   <ItemGroup>
     <BootstrapperPackage Include="Microsoft.Net.Client.3.5">
       <Visible>False</Visible>
