--- a/src/PNNLProteomics/MultiAlignCore.csproj
+++ b/src/PNNLProteomics/MultiAlignCore.csproj
@@ -8,8 +8,8 @@
     <ProjectGuid>{BDFA22C4-5822-4AA5-996E-6FDE57F7118B}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>PNNLProteomics</RootNamespace>
-    <AssemblyName>PNNLProteomics</AssemblyName>
+    <RootNamespace>MultiAlignCore</RootNamespace>
+    <AssemblyName>MultiAlignCore</AssemblyName>
     <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
     <FileUpgradeFlags>
     </FileUpgradeFlags>
@@ -180,17 +180,21 @@
     <Compile Include="Algorithms\Clustering\ClusteringAlgorithmType.cs" />
     <Compile Include="Algorithms\FeatureFinding\IFeatureFinder.cs" />
     <Compile Include="Algorithms\FeatureFinding\UMCFeatureFinder.cs" />
+    <Compile Include="Algorithms\MultiAlignAnalysisProcessor.cs" />
     <Compile Include="Algorithms\PeakMatching\IPeakMatcher.cs" />
     <Compile Include="Algorithms\PeakMatching\PeakMatcher.cs" />
-    <Compile Include="Cephes\clsMathUtilities.cs" />
+    <Compile Include="Data\AnalysisUtils.cs" />
+    <Compile Include="Data\ClusterToMassTagMap.cs" />
     <Compile Include="Data\DatasetInformation.cs" />
     <Compile Include="Data\DeisotopingTool.cs" />
+    <Compile Include="Data\Delegates.cs" />
     <Compile Include="Data\Factors\Factor.cs" />
     <Compile Include="Data\Factors\FactorInformation.cs" />
     <Compile Include="Data\Factors\FactorTree.cs" />
     <Compile Include="Data\Factors\TreeNode.cs" />
     <Compile Include="Data\Factors\TreeNodeConverter.cs" />
     <Compile Include="Data\LabelingType.cs" />
+    <Compile Include="Data\MassTags\MassTagConformation.cs" />
     <Compile Include="Data\MassTags\MassTagDatabase.cs" />
     <Compile Include="Data\MassTags\MassTagDatabaseFormat.cs" />
     <Compile Include="Data\MassTagToProteinMap.cs" />
@@ -217,7 +221,6 @@
     <Compile Include="IO\Features\Hibernate\DatasetDAOHibernate.cs" />
     <Compile Include="IO\Features\Hibernate\FactorDAOHibernate.cs" />
     <Compile Include="IO\Features\Hibernate\GenericDAOHibernate.cs" />
-    <Compile Include="IO\Features\Hibernate\MassTagConformation.cs" />
     <Compile Include="IO\Features\Hibernate\MassTagDAO.cs" />
     <Compile Include="IO\Features\Hibernate\MassTagDAOHibernate.cs" />
     <Compile Include="IO\Features\Hibernate\MSFeatureDAOHibernate.cs" />
@@ -240,6 +243,12 @@
     <Compile Include="IO\Features\Mammoth\MammothDatabaseStateException.cs" />
     <Compile Include="IO\Features\UMCLoaderFactory.cs" />
     <Compile Include="IO\Features\UmcReader.cs" />
+    <Compile Include="IO\InputFiles\CommandLineParser.cs" />
+    <Compile Include="IO\InputFiles\DatabaseDatasetIDLoader.cs" />
+    <Compile Include="IO\InputFiles\DatabaseDatasetLoader.cs" />
+    <Compile Include="IO\InputFiles\DelegatesLoading.cs" />
+    <Compile Include="IO\InputFiles\DiskDatasetLoader.cs" />
+    <Compile Include="IO\InputFiles\DMSDatasetSearchOptions.cs" />
     <Compile Include="IO\InputFiles\InputAnalysisInfo.cs" />
     <Compile Include="IO\InputFiles\InputDatabase.cs" />
     <Compile Include="IO\InputFiles\InputFile.cs" />
@@ -251,7 +260,9 @@
     <Compile Include="Filters\UMCClusterFilters.cs" />
     <Compile Include="Filters\UMCFilters.cs" />
     <Compile Include="ICloneable.cs" />
+    <Compile Include="IO\InputFiles\MultiAlignFileInputReader.cs" />
     <Compile Include="IO\MTDB\AccessMassTagDatabaseLoader.cs" />
+    <Compile Include="IO\MTDB\AnalysisMTDBSetupException.cs" />
     <Compile Include="IO\MTDB\IMTDBLoader.cs" />
     <Compile Include="IO\MTDB\MassTagDatabaseLoader.cs" />
     <Compile Include="IO\MTDB\MassTagDatabaseOptions.cs" />
@@ -274,6 +285,7 @@
     <Compile Include="Data\Cluster\classClusterMassTagMatch.cs" />
     <Compile Include="Data\Factors\FactorDefinitions.cs" />
     <Compile Include="Data\MassTags\clsMassTags.cs" />
+    <Compile Include="Math\MathUtilities.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
