--- a/src/MultiAlignCore/MultiAlignCore.csproj
+++ b/src/MultiAlignCore/MultiAlignCore.csproj
@@ -198,6 +198,7 @@
     <Compile Include="Data\MassTags\MassTagDatabase.cs" />
     <Compile Include="Data\MassTags\MassTagDatabaseFormat.cs" />
     <Compile Include="Data\MassTagToProteinMap.cs" />
+    <Compile Include="Data\MSFeatureToLCMSFeatureMap.cs" />
     <Compile Include="Data\MultiAlignAnalysis.cs" />
     <Compile Include="Data\MultiAlignAnalysisDelegates.cs" />
     <Compile Include="Data\StacFDR.cs" />
@@ -220,7 +221,9 @@
     <Compile Include="IO\Features\FeatureDataAccessProviders.cs" />
     <Compile Include="IO\Features\Hibernate\DatasetDAOHibernate.cs" />
     <Compile Include="IO\Features\Hibernate\FactorDAOHibernate.cs" />
-    <Compile Include="IO\Features\Hibernate\GenericDAOHibernate.cs" />
+    <Compile Include="IO\Features\Hibernate\GenericDAOHibernate.cs">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Compile>
     <Compile Include="IO\Features\Hibernate\MassTagDAO.cs" />
     <Compile Include="IO\Features\Hibernate\MassTagDAOHibernate.cs" />
     <Compile Include="IO\Features\Hibernate\MSFeatureDAOHibernate.cs" />
@@ -289,8 +292,11 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="IO\Features\Hibernate\hibernate.cfg.xml" />
+    <Content Include="hibernate.cfg.xml">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
     <Content Include="IO\Features\Hibernate\Mappings\ClusterToMassTagMap.hbm.xml" />
+    <Content Include="IO\Features\Hibernate\Mappings\MSFeatureToLCMSFeatureMap.hbm.xml" />
     <Content Include="IO\Features\Hibernate\Mappings\Dataset.hbm.xml" />
     <Content Include="IO\Features\Hibernate\Mappings\Factor.hbm.xml" />
     <Content Include="IO\Features\Hibernate\Mappings\MassTag.hbm.xml" />
