--- a/src/MultiAlignCore/MultiAlignCore.csproj
+++ b/src/MultiAlignCore/MultiAlignCore.csproj
@@ -191,6 +191,8 @@
     <Compile Include="Algorithms\Clustering\ClusteringAlgorithmType.cs" />
     <Compile Include="Algorithms\FeatureFinding\IFeatureFinder.cs" />
     <Compile Include="Algorithms\FeatureFinding\UMCFeatureFinder.cs" />
+    <Compile Include="Algorithms\MSLinkerType.cs" />
+    <Compile Include="Algorithms\MSnLinkerFactory.cs" />
     <Compile Include="Algorithms\MultiAlignAnalysisProcessor.cs" />
     <Compile Include="Algorithms\PeakMatching\IPeakMatcher.cs" />
     <Compile Include="Algorithms\PeakMatching\PeakMatcher.cs" />
@@ -312,20 +314,20 @@
     <Content Include="hibernate.cfg.xml">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
-    <Content Include="IO\Features\Hibernate\Mappings\ClusterToMassTagMap.hbm.xml" />
-    <Content Include="IO\Features\Hibernate\Mappings\MSMSFeature.hbm.xml" />
-    <Content Include="IO\Features\Hibernate\Mappings\MSFeatureToMSnFeatureMap.hbm.xml" />
-    <Content Include="IO\Features\Hibernate\Mappings\MSFeatureToLCMSFeatureMap.hbm.xml" />
-    <Content Include="IO\Features\Hibernate\Mappings\Dataset.hbm.xml" />
-    <Content Include="IO\Features\Hibernate\Mappings\Factor.hbm.xml" />
-    <Content Include="IO\Features\Hibernate\Mappings\MassTag.hbm.xml" />
-    <Content Include="IO\Features\Hibernate\Mappings\MassTagConformations.hbm.xml" />
-    <Content Include="IO\Features\Hibernate\Mappings\MassTagToProteinMap.hbm.xml" />
-    <Content Include="IO\Features\Hibernate\Mappings\MSFeature.hbm.xml" />
-    <Content Include="IO\Features\Hibernate\Mappings\Protein.hbm.xml" />
-    <Content Include="IO\Features\Hibernate\Mappings\StacFDR.hbm.xml" />
-    <Content Include="IO\Features\Hibernate\Mappings\Umc.hbm.xml" />
-    <Content Include="IO\Features\Hibernate\Mappings\UmcCluster.hbm.xml" />
+    <EmbeddedResource Include="IO\Features\Hibernate\Mappings\ClusterToMassTagMap.hbm.xml" />
+    <EmbeddedResource Include="IO\Features\Hibernate\Mappings\MSMSFeature.hbm.xml" />
+    <EmbeddedResource Include="IO\Features\Hibernate\Mappings\MSFeatureToMSnFeatureMap.hbm.xml" />
+    <EmbeddedResource Include="IO\Features\Hibernate\Mappings\MSFeatureToLCMSFeatureMap.hbm.xml" />
+    <EmbeddedResource Include="IO\Features\Hibernate\Mappings\Dataset.hbm.xml" />
+    <EmbeddedResource Include="IO\Features\Hibernate\Mappings\Factor.hbm.xml" />
+    <EmbeddedResource Include="IO\Features\Hibernate\Mappings\MassTag.hbm.xml" />
+    <EmbeddedResource Include="IO\Features\Hibernate\Mappings\MassTagConformations.hbm.xml" />
+    <EmbeddedResource Include="IO\Features\Hibernate\Mappings\MassTagToProteinMap.hbm.xml" />
+    <EmbeddedResource Include="IO\Features\Hibernate\Mappings\MSFeature.hbm.xml" />
+    <EmbeddedResource Include="IO\Features\Hibernate\Mappings\Protein.hbm.xml" />
+    <EmbeddedResource Include="IO\Features\Hibernate\Mappings\StacFDR.hbm.xml" />
+    <EmbeddedResource Include="IO\Features\Hibernate\Mappings\Umc.hbm.xml" />
+    <EmbeddedResource Include="IO\Features\Hibernate\Mappings\UmcCluster.hbm.xml" />
     <Content Include="MSDBLibrary.dll" />
     <Content Include="xerces-c_2_7.dll" />
     <Content Include="xerces-c_2_7D.dll" />
