--- a/src/MultiAlignCore/MultiAlignCore.csproj
+++ b/src/MultiAlignCore/MultiAlignCore.csproj
@@ -192,15 +192,21 @@
     <Compile Include="Algorithms\Alignment\IFeatureAligner.cs" />
     <Compile Include="Algorithms\AlgorithmBuilder.cs" />
     <Compile Include="Algorithms\Clustering\ClusteringAlgorithmType.cs" />
+    <Compile Include="Algorithms\FeatureFinding\UMCFeatureFinderOptions.cs" />
     <Compile Include="Algorithms\FeatureFinding\IFeatureFinder.cs" />
     <Compile Include="Algorithms\FeatureFinding\UMCFeatureFinder.cs" />
+    <Compile Include="Algorithms\FeaturesClusteredEventArgs.cs" />
+    <Compile Include="Algorithms\MSLinker\FeaturesExtractedEventArgs.cs" />
     <Compile Include="Algorithms\MSLinker\MSLinkerOptions.cs" />
     <Compile Include="Algorithms\MSLinker\MSLinkerType.cs" />
     <Compile Include="Algorithms\MSLinker\MSnLinkerFactory.cs" />
     <Compile Include="Algorithms\MultiAlignAnalysisProcessor.cs" />
     <Compile Include="Algorithms\PeakMatching\IPeakMatcher.cs" />
     <Compile Include="Algorithms\PeakMatching\PeakMatcher.cs" />
+    <Compile Include="Algorithms\PeakMatching\STACOptions.cs" />
+    <Compile Include="ApplicationUtility.cs" />
     <Compile Include="Data\AnalysisUtils.cs" />
+    <Compile Include="Data\FeatureExtractionMap.cs" />
     <Compile Include="Data\ClusterToMassTagMap.cs" />
     <Compile Include="Data\DatasetInformation.cs" />
     <Compile Include="Data\DeisotopingTool.cs" />
@@ -210,6 +216,8 @@
     <Compile Include="Data\Factors\FactorTree.cs" />
     <Compile Include="Data\Factors\TreeNode.cs" />
     <Compile Include="Data\Factors\TreeNodeConverter.cs" />
+    <Compile Include="Data\Features\FeatureFilterOptions.cs" />
+    <Compile Include="Data\Features\LCMSFeatureFilters.cs" />
     <Compile Include="Data\LabelingType.cs" />
     <Compile Include="Data\MassTags\MassTagConformation.cs" />
     <Compile Include="Data\MassTags\MassTagDatabase.cs" />
@@ -235,14 +243,18 @@
     <Compile Include="IO\Analysis\PeakMatchResultsWriter.cs" />
     <Compile Include="IO\Analysis\ReadProgressStream.cs" />
     <Compile Include="IO\Analysis\TableWriterColumnOptions.cs" />
+    <Compile Include="IO\Features\FeatureExtractionTableWriter.cs" />
+    <Compile Include="IO\Features\IMSnFeatureToMSFeatureDAO.cs" />
+    <Compile Include="IO\Features\IMSFeatureToLCMSFeatureDAO.cs" />
+    <Compile Include="IO\Features\Hibernate\MSFeatureToLCMSFeatureDAO.cs" />
+    <Compile Include="IO\Features\Hibernate\MSnFeatureToMSFeatureDAOHibernate.cs" />
+    <Compile Include="IO\Features\IFeatureClusterWriter.cs" />
     <Compile Include="IO\Features\IMSnFeatureDAO.cs" />
     <Compile Include="IO\Features\DataAccessFactory.cs" />
     <Compile Include="IO\Features\FeatureDataAccessProviders.cs" />
     <Compile Include="IO\Features\Hibernate\DatasetDAOHibernate.cs" />
     <Compile Include="IO\Features\Hibernate\FactorDAOHibernate.cs" />
-    <Compile Include="IO\Features\Hibernate\GenericDAOHibernate.cs">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </Compile>
+    <Compile Include="IO\Features\Hibernate\GenericDAOHibernate.cs" />
     <Compile Include="IO\Features\Hibernate\MassTagDAO.cs" />
     <Compile Include="IO\Features\Hibernate\MassTagDAOHibernate.cs" />
     <Compile Include="IO\Features\Hibernate\MSFeatureDAOHibernate.cs" />
@@ -268,6 +280,7 @@
     <Compile Include="IO\Features\MzXMLReader.cs" />
     <Compile Include="IO\Features\RawLoaderFactory.cs" />
     <Compile Include="IO\Features\ThermoRawDataFileReader.cs" />
+    <Compile Include="IO\Features\UMCClusterScanWriter.cs" />
     <Compile Include="IO\Features\UMCLoaderFactory.cs" />
     <Compile Include="IO\Features\UmcReader.cs" />
     <Compile Include="IO\InputFiles\CommandLineParser.cs" />
@@ -301,6 +314,8 @@
     <Compile Include="IO\Parameters\IParameterFileWriter.cs" />
     <Compile Include="IO\Parameters\MultiAlignParameterIniFileReader.cs" />
     <Compile Include="IO\Parameters\MultiAlignParameterIniFileWriter.cs" />
+    <Compile Include="IO\Parameters\ParameterHibernateMapping.cs" />
+    <Compile Include="IO\Parameters\ParameterUtility.cs" />
     <Compile Include="IO\Parameters\xmlIO.cs" />
     <Compile Include="IO\Parameters\XMLParameterFileReader.cs" />
     <Compile Include="IO\Parameters\XMLParameterFileWriter.cs" />
@@ -323,7 +338,7 @@
     <EmbeddedResource Include="IO\Features\Hibernate\Mappings\MSMSFeature.hbm.xml">
       <SubType>Designer</SubType>
     </EmbeddedResource>
-    <EmbeddedResource Include="IO\Features\Hibernate\Mappings\MSFeatureToMSnFeatureMap.hbm.xml" />
+    <EmbeddedResource Include="IO\Features\Hibernate\Mappings\MSnFeatureToMSFeatureMap.hbm.xml" />
     <EmbeddedResource Include="IO\Features\Hibernate\Mappings\MSFeatureToLCMSFeatureMap.hbm.xml" />
     <EmbeddedResource Include="IO\Features\Hibernate\Mappings\Dataset.hbm.xml" />
     <EmbeddedResource Include="IO\Features\Hibernate\Mappings\Factor.hbm.xml" />
@@ -335,6 +350,9 @@
     <EmbeddedResource Include="IO\Features\Hibernate\Mappings\StacFDR.hbm.xml" />
     <EmbeddedResource Include="IO\Features\Hibernate\Mappings\Umc.hbm.xml" />
     <EmbeddedResource Include="IO\Features\Hibernate\Mappings\UmcCluster.hbm.xml" />
+    <EmbeddedResource Include="IO\Parameters\Hibernate\ParameterHibernateMapping.hbm.xml">
+      <SubType>Designer</SubType>
+    </EmbeddedResource>
     <Content Include="MSDBLibrary.dll" />
     <Content Include="xerces-c_2_7.dll" />
     <Content Include="xerces-c_2_7D.dll" />
