--- a/src/MultiAlignCore/MultiAlignCore.csproj
+++ b/src/MultiAlignCore/MultiAlignCore.csproj
@@ -201,7 +201,7 @@
     <Compile Include="Data\Factors\ExperimentalFactor.cs" />
     <Compile Include="Data\FeatureExtractionMap.cs" />
     <Compile Include="Data\ClusterToMassTagMap.cs" />
-    <Compile Include="Data\DatasetInformation.cs" />
+    <Compile Include="Data\MetaData\DatasetInformation.cs" />
     <Compile Include="Data\DeisotopingTool.cs" />
     <Compile Include="Data\Delegates.cs" />
     <Compile Include="Data\Factors\Factor.cs" />
@@ -219,6 +219,7 @@
     <Compile Include="Data\MSFeatureToMSnFeatureMap.cs" />
     <Compile Include="Data\MultiAlignAnalysis.cs" />
     <Compile Include="Data\MultiAlignAnalysisDelegates.cs" />
+    <Compile Include="Data\PeakMatchingResults.cs" />
     <Compile Include="IO\Analysis\AnalysisAbundanceTableWriter.cs" />
     <Compile Include="IO\Analysis\AnalysisAlignmentDataWriter.cs" />
     <Compile Include="IO\Analysis\AnalysisBinaryReader.cs" />
@@ -291,7 +292,7 @@
     <Compile Include="IO\InputFiles\InputFile.cs" />
     <Compile Include="IO\InputFiles\InputFileReadMode.cs" />
     <Compile Include="IO\InputFiles\InputFileType.cs" />
-    <Compile Include="Data\ProjectMetaData.cs" />
+    <Compile Include="Data\MetaData\AnalysisMetaData.cs" />
     <Compile Include="Filters\FilterUtil.cs" />
     <Compile Include="Filters\IFilter.cs" />
     <Compile Include="Filters\UMCClusterFilters.cs" />
@@ -320,7 +321,7 @@
     <Compile Include="IO\Reports\AnalysisHTMLReport.cs" />
     <Compile Include="IO\MTDB\MTDBLoaderFactory.cs" />
     <Compile Include="Data\Alignment\classAlignmentData.cs" />
-    <Compile Include="Data\clsDMSServerInformation.cs" />
+    <Compile Include="Data\MetaData\clsDMSServerInformation.cs" />
     <Compile Include="Data\Cluster\classClusterDataSummaryAttr.cs" />
     <Compile Include="Data\Factors\FactorDefinitions.cs" />
     <Compile Include="Data\MassTags\clsMassTags.cs" />
@@ -338,7 +339,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="IO\Features\Hibernate\Mappings\MSnFeatureToMSFeatureMap.hbm.xml" />
     <EmbeddedResource Include="IO\Features\Hibernate\Mappings\MSFeatureToLCMSFeatureMap.hbm.xml" />
-    <EmbeddedResource Include="IO\Features\Hibernate\Mappings\Dataset.hbm.xml" />
+    <EmbeddedResource Include="IO\Features\Hibernate\Mappings\Dataset.hbm.xml">
+      <SubType>Designer</SubType>
+    </EmbeddedResource>
     <EmbeddedResource Include="IO\Features\Hibernate\Mappings\Factor.hbm.xml" />
     <EmbeddedResource Include="IO\Features\Hibernate\Mappings\MassTag.hbm.xml" />
     <EmbeddedResource Include="IO\Features\Hibernate\Mappings\MassTagConformations.hbm.xml" />
